Ant compile and run working