@@ -1,18 +1,72 @@
-<project name="Warehouse" default="dist" basedir=".">
+<project name="Warehouse" basedir="." default="compile">
 
-<!-- https://docs.oracle.com/javase/8/docs/technotes/guides/deploy/javafx_ant_tasks.html -->
+    <property name="src.dir" value="src"/>
+    <property name="dest.dir" value="dest"/>
+    <property name="doc.dir" value="doc"/>
+    <property name="build.dir" value="build"/>
+    <property name="lib.dir" location="lib"/>
+    <property name="res.dir" location="src/sample"/>
+    <property name="jar.name" value="warehouse-app"/>
+    <property name="main-class" value="sample.Main"/>
 
-    <target name="compile" description="Compile the Warehouse program">
-        <mkdir dir="build"/>
-        <javac srcdir="src" destdir="build"/>
-        <mkdir dir="dest"/>
-        <jar jarfile="dest/Warehouse.jar" >
-            <fileset dir="build"/>
+    <path id="classpath">
+        <pathelement location="${lib.dir}/javafx.base.jar"/>
+        <pathelement location="${lib.dir}/javafx.controls.jar"/>
+        <pathelement location="${lib.dir}/javafx.fxml.jar"/>
+        <pathelement location="${lib.dir}/javafx.graphics.jar"/>
+        <pathelement location="${lib.dir}/javafx.media.jar"/>
+        <pathelement location="${lib.dir}/javafx.swing.jar"/>
+        <pathelement location="${lib.dir}/javafx.web.jar"/>
+        <pathelement location="${lib.dir}/javafx-swt.jar"/>
+    </path>
+
+    <target name="clean">
+        <delete dir="${build.dir}"/>
+    </target>
+
+    <target name="createFileStructure">
+        <mkdir dir="${build.dir}"/>
+    </target>
+
+    <target name="compile" depends="clean, createFileStructure">
+        <javac srcdir="${src.dir}" destdir="${build.dir}" includeantruntime="false">
+            <compilerarg line="--module-path"/>
+            <compilerarg line="${lib.dir}"/>
+            <compilerarg line="--add-modules"/>
+            <compilerarg line="javafx.controls,javafx.fxml"/>
+            <classpath>
+                <path refid="classpath"/>
+            </classpath>
+        </javac>
+        <jar destfile="${dest.dir}\${jar.name}.jar" basedir="${build.dir}">
+            <fileset dir="${res.dir}"/>
+            <manifest>
+                <attribute name="Main-Class" value="${main-class}"/>
+            </manifest>
+            <zipgroupfileset dir="${lib.dir}" includes="**/*.jar"/>
         </jar>
     </target>
 
-    <target name="run" depends="compile" description="Run the Warehouse program">
-        <java classpath="dest/Warehouse.jar" classname="Main"/>
+
+    <target name="clean-doc">
+        <delete dir="${doc.dir}"/>
+    </target>
+
+    <target name="docs" depends="compile">
+        <javadoc sourcepath="${src.dir}" destdir="${doc.dir}">
+            <classpath>
+                <path refid="classpath"/>
+            </classpath>
+        </javadoc>
+    </target>
+
+    <target name="run">
+        <java jar="${dest.dir}/${jar.name}.jar" fork="true">
+            <jvmarg line="--module-path"/>
+            <jvmarg line=" ${lib.dir}"/>
+            <jvmarg line="--add-modules"/>
+            <jvmarg line="javafx.controls,javafx.fxml"/>
+        </java>
     </target>
 
 </project>
